--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image:url("http://data.hdwallpapers.im/free_indian_food.jpg");
+  background-image:url("https://media.giphy.com/media/DvyxIpxw9cCuQ/giphy.gif");
 }
 .products img{
   width:190px;
